minimal progress push befor office hours

--- a/BookingMicroServiceV2/src/main/resources/templates/ride-booking.html
+++ b/BookingMicroServiceV2/src/main/resources/templates/ride-booking.html
@@ -19,5 +19,6 @@
 	<input type="submit" value="Book your Ride"/>
 	<input type="reset" value="reset"/>
 </form>
+<h2> Your ride will cost</h2>
 </body>
 </html>
